# tft-analyzer

./: .gitignore  Dockerfile  Dockerfilespark  README.md  aaa.yml  docker-compose.yml  hadoop.env  pyproject.toml  requirements.txt
airflow/: Dockerfile  docker-compose.yaml  requirements.txt
airflow/dags/: connection.py  ingest_and_preprocess_logs_dag.py  ingest_logs_dag.py  ingest_matches_dag.py  ingest_static_players_dag.py  metrics_dag.py  preprocess_matches_dag.py  preprocess_static_players_dag.py  stream_metrics_dag.py
conf.dist/: hue-overrides.ini  hue.ini
data/: tft-augments.json  tft-champions.json  tft-items.json  tft-traits.json
jupyter/: Dockerfile  requirements.txt
jupyter/work/: Untitled.ipynb  composition_metrics.ipynb  get_puuids.ipynb  metrics.ipynb
tft-server/: Dockerfile  generate.py  log_entry.py  message_broker.py  requirements.txt  schema_registry.py
tft_analyzer/: main.py
tft_analyzer/batch/: aggregate.py  ingest.py  ingest_api.py  ingest_matches.py  ingest_players.py  ingest_static.py  preprocess.py
tft_analyzer/batch/aggregate/: augment_metrics.py  champion_item_metrics.py  champion_metrics.py  composition_metrics.py  item_metrics.py  placement_metrics.py  player_metrics.py  (+1 more)
tft_analyzer/stream/: ingest_logs.py
tft_analyzer/streaming/: connection.py  engagement_metrics.py  ingest_logs.py  player_activity_metrics.py  preprocess_logs.py  server_metrics.py  transaction_metrics.py
tft_analyzer_2/batch/: ingest_matches.py  ingest_static.py  preprocess_matches.py  preprocess_players.py  preprocess_static.py
tft_analyzer_2/streaming/: ingest_logs.py
(+24 files in other folders)
