[tool.poetry]
name = "tft_analyzer"
version = "0.1.0"
description = ""
authors = ["Sanja Petrović <petrovic.e24.2023@uns.ac.rs>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.0"
pytest = "^7.4.2"
Faker = "^19.11.0"
tqdm = "^4.66.1"
pytz = "^2022.1"
types-pytz = "^2021.3.7"
pandas = "^1.4.2"
ua-parser = "^0.10.0"
pandarallel = "^1.6.1"
pyarrow = "^7.0.0"
dynaconf = "^3.2.3"
loguru = "^0.7.2"
delta-spark = "^3.0.0"
confluent-kafka = "^2.3.0"
requests = "^2.31.0"
fastavro = "^1.9.0"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
isort = "^5.12.0"
pylint = "^3.0.1"
black = "^23.10.0"
chispa = "^0.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "tft_analyzer.main:main"